--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "expressTest",
   "version": "0.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {
+    "browser-sync": "^2.15.0",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^2.13.6"
+  }
 }
