Add dev packages

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "devDependencies": {
     "browser-sync": "^2.15.0",
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-connect": "^5.0.0",
+    "gulp-livereload": "^3.8.1",
     "gulp-typescript": "^2.13.6"
   }
 }
