--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "gulp-connect": "^5.0.0",
     "gulp-livereload": "^3.8.1",
     "gulp-typescript": "^2.13.6"
+  },
+  "dependencies": {
+    "express": "^4.14.0"
   }
 }
