--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-typescript": "^2.13.6"
   },
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "socket.io": "^1.5.0"
   }
 }
