--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "express": "^4.14.0",
-    "socket.io": "^1.5.0"
+    "socket.io": "^1.5.0",
+    "svgjs": "^2.3.6"
   }
 }
