Implement game start and switch compile target to es6

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es5"
+    "target": "es6"
   },
-  "files": [
-    "src/**/*.ts",
-    "typings/**/*.d.ts"
-  ],
   "filesGlob": [
+    "src/server/app.ts",
     "src/**/*.ts",
     "src/*.ts",
     "typings/**/*.d.ts",
